# jhg

./: LICENSE  README.md  config.json  pyproject.toml  run.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
jhgame/: battlefield.py  battlefieldui.py  config.py  darknet.py  declient.py  deserver.py  detector.py  game.py  gamelog.py  jhclient.py  jhserver.py  menu.py  player.py  room.py  scorescreen.py
models/: yolov3_tiny.cfg
