[tool.poetry]
name = "janken-hockey-game"
version = "0.1.0"
description = ""
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.2"
opencv-python = "^4.2.0"
pygame = "^1.9.6"
pygame-menu = "^2.1.2"
screeninfo = "^0.6.1"
torch = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
